# EmployeeManagementSystem

CurdOperation/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  main.cpp
EmployeeSystemusingQStackedWidget/EmployeeDashborad/: CMakeLists.txt  employeedashboard.h  employeedashboard.ui  main.cpp
EmployeeSystemusingQStackedWidget/EmployeeLogin/: CMakeLists.txt  employeedashboard.cpp  employeelogin.cpp  employeelogin.h  employeelogin.ui  main.cpp
EmployeeSystemusingQStackedWidget/EmployeeSystem/: CMakeLists.txt  employeedashboard.cpp  employeedashboard.h  employeedashboard.ui  employeelogin.cpp  employeelogin.h  employeelogin.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
